--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.344.0",
+    "framer-motion": "^11.2.10",
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
