--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "lucide-react": "^0.344.0",
     "framer-motion": "^11.2.10",
+    "lucide-react": "^0.344.0",
     "next": "14.2.3",
+    "next-themes": "^0.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.51.5",
